# skills-manager

./: README.md  README.zh-CN.md  package.json
scripts/: run-rust-cli.mjs
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: scenarios.rs  sync.rs  tools.rs
src-tauri/src/core/: app_state.rs  central_repo.rs  mod.rs  scenario_service.rs  tool_service.rs
src/components/: AgentIcon.tsx  AgentToggleSection.tsx  Sidebar.tsx
src/i18n/: en.json  zh-TW.json  zh.json
src/views/: GlobalWorkspace.tsx  ProjectDetail.tsx  Settings.tsx
