[package]
name = "skills-manager"
version = "1.0.0"
description = "Skills Manager - AI Agent Skills Central Manager"
authors = ["tianliang"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "skills-manager"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10"
dirs = "5.0"
walkdir = "2.5"
fs2 = "0.4"
unicode-normalization = "0.1"
caseless = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
chrono = "0.4"
serde_yaml = "0.9"
git2 = { version = "0.19", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
hex = "0.4"
urlencoding = "2"
zip = "2"
tempfile = "3.26.0"
semver = "1"
aes-gcm = "0.10"
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "6.1.1"
clap = { version = "4.5", features = ["derive"] }
